# soda

./: README.md  pyproject.toml
src/soda/: __init__.py  optimize.py  prompts.py  types.py  workflow.py
