[project]
name = "soda"
version = "0.0.1"
description = "An optimizer for Deep Agents for discovering the perfect Sub-agent setup"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "deepagents>=0.0.5",
    "langgraph>=0.6.7",
    "langchain-anthropic>=0.3.19",
    "langchain>=0.3.27",
]


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soda"]
[tool.setuptools.package-dir]
"soda" = "src/soda"

[tool.setuptools.package-data]
"*" = ["py.typed"]